# Models/Portal/Implementations/FundingOpportunityRepository.cs
@@ -40,6 +40,8 @@ namespace InternalPortal.Models.Portal.Implementations
                                    .Include(c=>c.FundingOpportunityResources)
                                    .Include(c=>c.FundingOpportunityFrequentlyAskedQuestions)
                                             .ThenInclude(ec=>ec.FrequentlyAskedQuestion)
+                                   .Include(c => c.FundingOpportunityInternalUsers)
+                                            .ThenInclude(ec => ec.InternalUser)                                                                      
                                    .ToList();
 
             foreach (var x in fos)
@@ -89,6 +91,8 @@ namespace InternalPortal.Models.Portal.Implementations
                                    .Include(c => c.FundingOpportunityResources)
                                    .Include(c => c.FundingOpportunityFrequentlyAskedQuestions)
                                             .ThenInclude(ec => ec.FrequentlyAskedQuestion)
+                                   .Include(c => c.FundingOpportunityInternalUsers)
+                                            .ThenInclude(ec => ec.InternalUser)
                                    .ToList();
 
             foreach (var x in fos)
@@ -140,6 +144,8 @@ namespace InternalPortal.Models.Portal.Implementations
                                    .Include(c => c.FundingOpportunityResources)
                                    .Include(c => c.FundingOpportunityFrequentlyAskedQuestions)
                                             .ThenInclude(ec => ec.FrequentlyAskedQuestion)
+                                   .Include(c => c.FundingOpportunityInternalUsers)
+                                            .ThenInclude(ec => ec.InternalUser)
                                    .ToList();
 
             foreach (var x in fos)
@@ -189,6 +195,8 @@ namespace InternalPortal.Models.Portal.Implementations
                                    .Include(c => c.FundingOpportunityResources)
                                    .Include(c => c.FundingOpportunityFrequentlyAskedQuestions)
                                             .ThenInclude(ec => ec.FrequentlyAskedQuestion)
+                                   .Include(c => c.FundingOpportunityInternalUsers)
+                                            .ThenInclude(ec => ec.InternalUser)
                                    .ToList();
 
             foreach (var x in fos)
@@ -238,6 +246,8 @@ namespace InternalPortal.Models.Portal.Implementations
                                    .Include(c => c.FundingOpportunityResources)
                                    .Include(c => c.FundingOpportunityFrequentlyAskedQuestions)
                                             .ThenInclude(ec => ec.FrequentlyAskedQuestion)
+                                   .Include(c => c.FundingOpportunityInternalUsers)
+                                            .ThenInclude(ec => ec.InternalUser)
                                    .ToList();
 
             foreach (var x in fos)
@@ -292,6 +302,8 @@ namespace InternalPortal.Models.Portal.Implementations
                 .Include(c => c.FundingOpportunityResources)
                 .Include(c => c.FundingOpportunityFrequentlyAskedQuestions)
                         .ThenInclude(ec => ec.FrequentlyAskedQuestion)
+                .Include(c => c.FundingOpportunityInternalUsers)
+                                            .ThenInclude(ec => ec.InternalUser)
                 .SingleOrDefaultAsync(i=>i.FundingOpportunityId == id);
 
 
@@ -320,6 +332,8 @@ namespace InternalPortal.Models.Portal.Implementations
                 .Include(c => c.FundingOpportunityResources)
                 .Include(c => c.FundingOpportunityFrequentlyAskedQuestions)
                 .ThenInclude(ec => ec.FrequentlyAskedQuestion)
+                .Include(c => c.FundingOpportunityInternalUsers)
+                                            .ThenInclude(ec => ec.InternalUser)
                .SingleOrDefaultAsync(i => i.FundingOpportunityId == id);
 
             entity.Lang = _Language;
@@ -361,6 +375,8 @@ namespace InternalPortal.Models.Portal.Implementations
                                    .Include(c => c.FundingOpportunityResources)
                                    .Include(c => c.FundingOpportunityFrequentlyAskedQuestions)
                                             .ThenInclude(ec => ec.FrequentlyAskedQuestion)
+                                  .Include(c => c.FundingOpportunityInternalUsers)
+                                            .ThenInclude(ec => ec.InternalUser)
                                   .ToList();
 
             foreach (var x in fos)
